// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reformed HOC handles onChange event correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Hombre"
  />
  <input
    checked={undefined}
    name="introduction"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC handles onChange event on nested property correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <input
    checked={undefined}
    name="introduction"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="El Grande"
  />
</form>
`;

exports[`reformed HOC handles setModel and setSubmitted 1`] = `
<form
  onSubmit={[Function]}
>
  <span>
    Submitted!
  </span>
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="introduction"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC renderers form component correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <input
    checked={undefined}
    name="introduction"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;
